--- a/medial-queries1/main.css
+++ b/medial-queries1/main.css
@@ -1,3 +1,66 @@
 body {
-  background: blanchedalmond;
+  background: seashell;
+}
+
+.container-{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  background-color: lightblue;
+
+ 
+}
+.a, .b, .c {
+  border: solid 0.1em rgb(255, 255, 255);
+  background-color: rgb(126, 169, 234);
+  padding: 1em;
+  flex-grow: 1;
+  font-size: 20px;
+  font-weight: 400;
+  cursor: pointer;
+  margin: 10px;
+
+}
+.a{
+  flex-grow: 1;
+  flex-basis: 100%;
+}
+
+.b{
+  flex-grow: 2;
+  flex-basis: 80%;
+  height: 50vh;
+}
+.c {
+  flex-basis: 25%;
+
+}
+h1, h2, p{
+  text-align: center;
+  align-content: center;
+  font-family: Verdana 'sans-serif';
+  font-size: 45px;
+}
+
+p{
+  font-size: 25px;
+  font-weight: bold;
+  font-family: Verdana 'sans-serif';
+
+}
+
+/* Mobile Version */
+@media (max-width: 600px){
+  .container-1 {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  .a{
+    width: 100%;
+    max-width: 100vw;
+  }
+  .b {
+    flex-basis: 100%;
+  }
+
 }
