--- a/medial-queries2/main.css
+++ b/medial-queries2/main.css
@@ -1,3 +1,93 @@
 body {
-  background: papayawhip;
+  background: rgb(247, 149, 20);
+}
+
+.container-1{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  background-color: rgb(255, 188, 20);
+
+}
+
+.container-2{
+  display:flex;
+  flex-wrap: wrap;
+  flex-basis: 70%;
+  background-color: rgb(255, 151, 32);
+  min-height: 45vh;
+}
+
+.a, .b, .c, .d, .e, .f {
+  border: solid 0.1em rgb(255, 255, 255);
+  background-color: rgb(58, 118, 190);
+  padding: 1em;
+  flex-grow: 1;
+  font-family: 'Shalimar', cursive;
+  font-size: 20px;
+  font-weight: 400;
+  cursor: pointer;
+  margin: 10px;
+
+}
+
+
+.a:hover, .b:hover, .c:hover, .d:hover, .e:hover, .f:hover{
+  color: white;
+  cursor: pointer;
+  background-color: rgb(245, 175, 35) opacity 0.5;
+  transition: 0.5s;
+  border: solid 0.1em rgb(255, 255, 255);
+  
+}
+
+.a{
+  flex-grow: 1;
+  flex-basis: 100%;
+}
+
+.b{
+  flex-grow: 2;
+  flex-basis: 80%;
+  height: 50vh;
+}
+
+
+.c, .d, .e {
+  flex-basis: 25%;
+    
+}
+h1, h2, p{
+  text-align: center;
+  align-content: center;
+  font-family: 'Shalimar', cursive;
+  font-size: 45px;
+}
+
+p{
+  font-size: 25px;
+  font-weight: bold;
+  font-family: 'Shalimar', cursive;
+  
+}
+
+/* Mobile Version */
+@media (max-width: 600px){
+  .container-1 {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  .a{
+    width: 100%;
+    max-width: 100vw;
+  }
+  .b {
+    flex-basis: 100%;
+  }
+
+  .container-2 {
+    display: flex;
+    flex-wrap: wrap;
+    flex-basis: 100%;
+  }
 }
